--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,7 +200,7 @@ main {
     font-size: 30px;
 }
 
-.matches-slide {
+.matches-slide{
     display: flex;
     align-items: center;
     gap: 50px;
@@ -212,7 +212,7 @@ main {
     font-size: 25px;
 }
 
-.matches-contain {
+.matches-contain{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -222,7 +222,6 @@ main {
 
 .match-contain {
     background: var(--white);
-    box-shadow: 5px 5px 15px rgba(0, 0 , 0, 0.2);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -261,4 +260,33 @@ main {
 
 .destacado {
     background-color: var(--yellow);
+}
+
+.container {
+    margin: 0 auto;
+    width: 90%;
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.container h2 {
+    text-align: center;
+    font-weight: 800;
+    font-size: 30px;
+}
+
+
+.splide__slide li{
+    width: 100%;
+    height: auto;
+}
+
+.splide__arrow {
+    background-color: var(--green) !important;
+}
+
+.splide__arrow svg{
+    fill: var(--white) !important;
 }
