--- a/assets/css/mediaqueries.css
+++ b/assets/css/mediaqueries.css
@@ -10,6 +10,9 @@
 @media (max-width: 576px) {
 
     /* MOBILE */
+    .navbar-sponsors {
+        padding: 0 20px;
+    }
 
     .navbar-list {
         position: absolute;
@@ -21,7 +24,6 @@
         align-items: flex-end;
         gap: 35px;
         height: calc(100vh - 80px);
-        z-index: 1;
         transform: translate(-200%);
         transition: all 0.5s cubic-bezier(0.92, 0.01, 0.35, 0.99);
         display: none;
@@ -52,8 +54,10 @@
         cursor: pointer;
     }
 
-    .menu-label img {
+    .menu-label {
+        font-size: 30px;
         padding-right: 10px;
+        color: var(--white);
     }
 
     .match-title {
@@ -74,10 +78,11 @@
     }
 
     /* PARTIDO DESTACADO */
-    .container {
+    .matches-slides {
         width: 100%;
         display: flex;
         flex-direction: column;
         gap: 30px;
+        padding: 50px 20px;
     }
 }
